# simplewal

./: .gitignore  BUILD.bazel  MODULE.bazel  go.mod  go.sum
cmd/simplewal/: BUILD.bazel  main.go
internal/wal/: BUILD.bazel  entry.go  wal.go
proto/: BUILD.bazel  wal.pb.go  wal.proto
