load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "wal_proto_lib"
    srcs = ["wal.proto"]
)

go_proto_library(
    name = "wal_go_proto"
    importpath = "github.com/muhammadmontasir/simplewal/proto"
    proto = ":wal_proto_lib"
    # deps = ["@org_golang_google_protobuf//reflect/protoreflect"], 
)