load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "wal_proto_lib",
    srcs = ["wal.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "wal_go_proto",
    importpath = "github.com/muhammadmontasir/simplewal/proto",
    proto = ":wal_proto_lib",
    visibility = ["//visibility:public"],
    # deps = ["@org_golang_google_protobuf//reflect/protoreflect"],
)
