load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "wal_lib",
    srcs = [
        "entry.go",
        "wal.go",
    ],
    importpath = "github.com/muhammadmontasir/simplewal/internal/wal",
    visibility = ["//cmd/simplewal:__pkg__"],
    deps = ["//proto:wal_go_proto"],
)

go_test(
    name = "wal_test",
    srcs = ["wal_test.go"],
    embed = [":wal_lib"],
    deps = ["//proto:wal_go_proto", "@com_github_stretchr_testify//require:go_default_library"],
)
